--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "366a0dc9-ab47-46c1-9697-08448e2a2a06"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
